# starcore_for_flutter

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: settings.gradle
example/: .metadata  README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/starfiles/: mymath.lua  testcallback.py  testcallback.rb  testpy.py
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example_starflut/: .metadata  README.md  pubspec.yaml
example_starflut/lib/: home_controller.dart  main.dart
example_starflut/starfiles/: main.py
example_starflut/windows/: CMakeLists.txt
ios/: starflut.podspec
ios/Classes/: StarflutPlugin.m  SwiftStarflutPlugin.swift  starflut_plugin_common.h  starflut_plugin_common.mm
lib/: starflut.dart
lib/src/: star_object.dart  star_para_pkg.dart  star_service.dart  starbin_buf.dart  starcore_base.dart  starcore_factory.dart  starsrv_group.dart  type_defs.dart
linux/: CMakeLists.txt
macos/Classes/: StarflutPlugin.swift  starflut_plugin_common.h
starflut/: .flutter-plugins  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
starflut/android/: .project  build.gradle
starflut/example/: README.md  pubspec.yaml
starflut/ios/: starflut.podspec
starflut/lib/: starflut.dart
starflut/windows/: CMakeLists.txt  md5proc.h  starflut_plugin.cpp  starflut_plugin_common.cpp  vs_shell.c
starflut/windows/include/starcore/: vsopennetlink.h
test/: starflut_test.dart
windows/: md5proc.cpp  srplib_main.cpp  starflut_plugin_common.cpp
(+89 files in other folders)
